--- a/Aula3/css/style.css
+++ b/Aula3/css/style.css
@@ -4,7 +4,7 @@
     font-family: sans-serif;
 }
 
-nav {
+nav#menu {
     text-align: right;
     background-color: rgba(30, 78, 15, 0.63);
     padding-top: 20px;
@@ -96,4 +96,36 @@ div#desafioex4 {
 
 #cssex5 {
     background-color: aquamarine;
+}
+
+nav#desafiocorrigido {
+    border: 1px black solid;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: rgb(58, 58, 107);
+    color: rgb(255, 255, 255);
+    padding: 5px;
+}
+
+img {
+    border: 1px blue solid;
+    width: 56px;
+    border-radius: 50%;
+    margin-left: 10px;
+}
+
+ul {
+    display: flex;
+    padding-right: 15px;
+}
+
+li  {
+    list-style: none;
+    padding-left: 10px;
+}
+
+a {
+    color: wheat;
+    text-decoration: none;
 }
